--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-/*    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'*/
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     implementation 'com.github.sundeepk:compact-calendar-view:1.8.3'
+    implementation 'com.github.alamkanak:android-week-view:1.2.6'
+
+    implementation 'com.framgia.library.calendardayview:library:1.0.4'
 }
