--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     implementation 'com.github.alamkanak:android-week-view:1.2.6'
 
     implementation 'com.framgia.library.calendardayview:library:1.0.4'
+
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
